...
                                <connections>
                                    <action selector="clickAirshowLive:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5ER-pK-uKQ"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MT0-bn-001">
                                <rect key="frame" x="148" y="203" width="118" height="30"/>
                                <state key="normal" title="MediaTailor Sample"/>
                                <connections>
                                    <action selector="clickMediaTailorSample:" destination="BYZ-38-t0r" eventType="touchUpInside" id="MT0-ax-002"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
...
